--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ email:
 baseurl: ""
 paginate: 5
 paginate_path: "/blog/page-:num"
-google_analytics: 
+google_analytics: UA-91235140-1
 
 # SEO settings
 title: Greenisms
