--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-email: kevin@greenisms.com
-baseurl: "www.greenisms.com"
+email: 
+baseurl: ""
 paginate: 5
 paginate_path: "/blog/page-:num"
 google_analytics: UA-91235140-1
