--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ title: Greenisms
 description: Quality Content, Sourced Responsibly, Designed to Help You!
 url: ""
 twitter_username: 
-default_img: 
+default_img: G0471599.JPG
 
 # Profile settings
 name: 
