--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ google_analytics: UA-91235140-1
 
 # SEO settings
 title: Greenisms
-description: Quality Content, Sourced Responsibly, Designed to Help You!
+description: 
 url: ""
 twitter_username: 
 default_img: G0471599.JPG
