--- a/_config.yml
+++ b/_config.yml
@@ -10,11 +10,11 @@ title: Greenisms
 description: 
 url: ""
 twitter_username: 
-default_img: http://www.greenisms.com/assets/images/G0471599.JPG
+default_img:
 
 # Profile settings
 name: 
-profile_img: 
+profile_img: http://www.greenisms.com/assets/images/G0471599.JPG
 profile: 
 social:
 
